Add setting Dialog with port number value in it.
Based on example from: http://viralpatel.net/blogs/android-preferences-activity-example/

Signed-off-by: Tzachi Dar <tzachi.dar@gmail.com>

--- a/app/src/main/res/menu/dexterity.xml
+++ b/app/src/main/res/menu/dexterity.xml
@@ -2,4 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ht1.dexterity.app.DexterityActivity" >
 
+     <!-- Settings, should always be in the overflow -->
+    <item android:id="@+id/action_settings"
+          android:title="@string/action_settings"
+          android:showAsAction="never" />
 </menu>
